OCA/Beispiele2/examples/examples/01_constructor/02_constructor_private/pack/Sub2.java
// Z:\JAV2\examples\01_constructor\02_constructor_private

package pack;

public class Sub2 // extends Super
                  // error: Super() has private access in Super
{
}